--- a/index.html
+++ b/index.html
@@ -7,110 +7,140 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <title>PRACTICO JS - DESARROLLO APLICATIVOS</title>
+    <title>Editar Productos</title>
   </head>
   <body>
     <br>
+    <div style="text-align: center";>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Crear o Editar Producto </button>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Crear Producto</h5>
+          </div>
 
-<!--NOMBRE  -->
+<!-- NOMBRE  -->
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+      <input type="text" class="form-control" id="Nombre" placeholder="Ingrese su nombre">
     </div>
 
-<!--APELLIDO  -->
+<!-- PRECIO  -->
     <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-      <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+      <label for="exampleFormControlInput1" class="form-label">Precio</label>
+      <input type="number" class="form-control" id="Precio" placeholder="Ingrese Precio">
     </div>
 
-<!-- DIRECCION  -->
+<!-- CALIDAD  -->
     <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Direccion</label>
-      <input type="text" class="form-control" id="direccion" placeholder="Ingrese su direccion">
+      <label for="exampleFormControlInput1" class="form-label">Calidad</label>
+      <input type="text" class="form-control" id="Calidad" placeholder="Ingrese Calidad">
     </div>
 
-<!-- TITULO  -->
+<!-- DESCRIPCION  -->
     <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-      <input type="text" class="form-control" id="titulo" placeholder="Ingrese su titulo">
+      <label for="exampleFormControlInput1" class="form-label">Descripción</label>
+      <input type="text" class="form-control" id="Descripcion" placeholder="Ingrese Descripción">
     </div>
 
-<!-- EDAD  -->
+<!-- MARCA  -->
     <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Edad</label>
-      <input type="number" class="form-control" id="edad" placeholder="Ingrese su edad">
+      <label for="exampleFormControlInput1" class="form-label">Marca</label>
+      <input type="text" class="form-control" id="Marca" placeholder="Ingrese Marca">
     </div>
 
-<!-- AVATAR  -->
+<!-- Imagen  -->
 <div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Avatar</label>
-  <input type="text" class="form-control" id="avatar" placeholder="Ingrese su Avatar">
+  <label for="exampleFormControlInput1" class="form-label">Imagen</label>
+  <input type="text" class="form-control" id="Imagen" placeholder="Ingrese Imagen">
 </div>
 
-<!-- BOTON  -->
-<button class="btn btn-primary" id="crearPersona">Enviar</button>
-
-<!--ID EDIT -->
+<!-- Id  -->
 
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">ID</label>
   <input type="text" class="form-control" id="id" placeholder="Ingrese su id">
 </div>
 
-<!--NOMBRE EDIT  -->
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-  <input type="text" class="form-control" id="nombreedit" placeholder="Ingrese su nombre">
-</div>
-
-<!--APELLIDO  -->
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-  <input type="text" class="form-control" id="apellidoedit" placeholder="Ingrese su apellido">
-</div>
-
-<!-- DIRECCION  -->
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Direccion</label>
-  <input type="text" class="form-control" id="direccionedit" placeholder="Ingrese su direccion">
-</div>
-
-<!-- TITULO  -->
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-  <input type="text" class="form-control" id="tituloedit" placeholder="Ingrese su titulo">
-</div>
-
-<!-- EDAD  -->
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Edad</label>
-  <input type="number" class="form-control" id="edadedit" placeholder="Ingrese su edad">
-</div>
-
-<!-- AVATAR  -->
-<div class="mb-3">
-<label for="exampleFormControlInput1" class="form-label">Avatar</label>
-<input type="text" class="form-control" id="avataredit" placeholder="Ingrese su Avatar">
-</div>
-
-<!-- BOTON  -->
-<button class="btn btn-primary" id="editPersonas">Editar</button>
+<!-- BOTONES  -->
+<button class="btn btn-primary" id="crearProducts">Enviar</button>  
 <br>
-<br>
-<br>
+<button class="btn btn-primary" id="editProducts">Editar</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- NOMBRE  
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+      <input type="text" class="form-control" id="Nombre" placeholder="Ingrese su nombre">
+    </div>
+
+ PRECIO  
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Precio</label>
+      <input type="number" class="form-control" id="Precio" placeholder="Ingrese Precio">
+    </div>
+
+ CALIDAD  
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Calidad</label>
+      <input type="text" class="form-control" id="Calidad" placeholder="Ingrese Calidad">
+    </div>
+
+ DESCRIPCION  
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Descripción</label>
+      <input type="text" class="form-control" id="Descripcion" placeholder="Ingrese Descripción">
+    </div>
+
+ MARCA  
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Marca</label>
+      <input type="text" class="form-control" id="Marca" placeholder="Ingrese Marca">
+    </div>
+
+ Imagen  
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Imagen</label>
+  <input type="text" class="form-control" id="Imagen" placeholder="Ingrese Imagen">
+</div>
+
+ Id  
+
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">ID</label>
+  <input type="text" class="form-control" id="id" placeholder="Ingrese su id">
+</div>
+
+ BOTON  
+<button class="btn btn-primary" id="crearProducts">Enviar</button>
+
+ BOTON  
+<button class="btn btn-primary" id="editProducts">Editar</button>
+
+-->
+
 
 <table class="table">
   <thead>
     <tr>
       <th scope="col">Nombre</th>
-      <th scope="col">ID</th>
-      <th scope="col">Apellido</th>
-      <th scope="col">Direccion</th>
-      <th scope="col">Titulo</th>
-      <th scope="col">Edad</th>
-      <th scope="col">Avatar</th> 
+      <th scope="col">Precio</th>
+      <th scope="col">Calidad</th>
+      <th scope="col">Descripcion</th>
+      <th scope="col">Marca</th>
+      <th scope="col">Imagen</th> 
+      <th scope="col">Id</th> 
       <th scope="col">Eliminar</th>   
 
     </tr>
