--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 <!-- NOMBRE  -->
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="Nombre" placeholder="Ingrese su nombre">
+      <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
     </div>
 
 <!-- PRECIO  -->
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Precio</label>
-      <input type="number" class="form-control" id="Precio" placeholder="Ingrese Precio">
+      <input type="number" class="form-control" id="precio" placeholder="Ingrese Precio">
     </div>
 
 <!-- DESCRIPCION  -->
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Descripción</label>
-      <input type="text" class="form-control" id="Descripcion" placeholder="Ingrese Descripción">
+      <input type="text" class="form-control" id="descripcion" placeholder="Ingrese Descripción">
     </div>
           
 <!-- Imagen  -->
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Imagen</label>
-  <input type="text" class="form-control" id="Imagen" placeholder="Ingrese Imagen">
+  <input type="text" class="form-control" id="imagen" placeholder="Ingrese Imagen">
 </div>
 
 <!-- Id  -->
